--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.21.0",
     "redux-persist": "^6.0.0",
-    "rtk": "^3.1.1"
+    "rtk": "^3.1.1",
+    "yarn": "^1.22.21"
   },
   "devDependencies": {
     "@types/node": "^20.10.5",
